frontend/test/should_pass/exectype_AssignSequenceResultToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(x=(r));
	}
}