frontend/test/should_fail/exectype_AssignSequenceResultToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:int=(r));
	}
}